--- a/Alba.CsCss/Style/Original/nsCSSParser.tt
+++ b/Alba.CsCss/Style/Original/nsCSSParser.tt
@@ -190,7 +190,7 @@ namespace Alba.CsCss.Style
             .ReReplace(@"nsMediaExpression::e(\w+)", "nsMediaExpression.RangeType.$1")
             .ReReplace(@"nsMediaFeature::eMinMax(\w+)", "nsMediaFeature.RangeType.MinMax$1")
             .ReReplace(@"nsMediaFeature::e(\w+)", "nsMediaFeature.ValueType.$1")
-            .ReReplace(@"Rule::(\w+)_RULE", "RuleKind.$1")
+            .ReReplace(@"Rule::(\w+)_RULE", m => "CssRuleKind." + ToPascalId(m))
             .ReReplace(@"NS_STYLE_(\w+)", "nsStyle.$1")
             .ReReplace(@"NS_FONT_(\w+)", "nsFont.$1")
             .ReReplace(@"NS_ATTR_FUNC_(\w+)", "nsAttrFunc.$1")
