--- a/Alba.CsCss/Style/Original/nsCSSScanner.tt
+++ b/Alba.CsCss/Style/Original/nsCSSScanner.tt
@@ -35,11 +35,11 @@ using PRUnichar = System.Char;
 
 namespace Alba.CsCss.Style
 {
-internal partial class <#=className#>
-{
-<#= ConvertSource(source) #>
-} // class <#=className#>
-} // namespace Alba.CsCss
+    internal partial class <#=className#>
+    {
+        <#= ConvertSource(source).Indent(8) #>
+    }
+}
 <#+
     } // GenerateSource
 #>
