Shortened code generatd by WriteTypeRenames

--- a/Alba.CsCss/Style/Media/Original/nsMediaFeatures.tt
+++ b/Alba.CsCss/Style/Media/Original/nsMediaFeatures.tt
@@ -17,11 +17,10 @@
 //
 
 using System.Collections.Generic;
-using Alba.CsCss.Gfx;
 
 namespace Alba.CsCss.Style
 {
-<#+ WriteTypeRenames(); #>
+<#+ WriteTypeRenames("nsMediaFeature"); #>
 
     internal partial class nsMediaFeatures
     {
