--- a/Alba.CsCss/Style/Original/nsCSSProps.tt
+++ b/Alba.CsCss/Style/Original/nsCSSProps.tt
@@ -14,14 +14,12 @@
 // Generated file. Do not edit manually.
 //
 
-using Alba.CsCss.Gfx;
-
 using int32_t = System.Int32;
 using uint32_t = System.Int32;
 
 namespace Alba.CsCss.Style
 {
-<#+ WriteTypeRenames(); #>
+<#+ WriteTypeRenames("nsCSSProperty"); #>
 
     internal partial class nsCSSProps
     {
