Renamed CssProperty enum values to PascalCase

--- a/Alba.CsCss/Style/Original/nsCSSParser.tt
+++ b/Alba.CsCss/Style/Original/nsCSSParser.tt
@@ -67,7 +67,7 @@ namespace Alba.CsCss.Style
         int i = 0;
         Func<MatchEvaluator, MatchEvaluator, MatchEvaluator> GenerateVarListEvaluator = (evalType, evalValue) =>
             m => evalType(m) + " " + m.GetAll("Var").Select(v => v+" = "+evalValue(m)).JoinString(", ") + ";";
-        return source
+        source = source
 
             // whitespace
             .ReReplace(@"\r", "")
@@ -436,6 +436,7 @@ namespace Alba.CsCss.Style
             .ReReplace(@"\n", "\r\n")
             .Trim()
             ;
+        return Refactor(source);
     }
 
     IEnumerable<string> ConvertVariantDefines (string source)
