Renamed enum values to PascalCase of types CssAttrFunction, CssPseudoClass, CssPseudoElement, CssUnit; added EditorBrowsable attr to hide moz/unused enum values

--- a/Alba.CsCss/Style/Original/StyleRule.tt
+++ b/Alba.CsCss/Style/Original/StyleRule.tt
@@ -18,7 +18,7 @@ namespace Alba.CsCss.Style
     public enum CssAttrFunction
     {
 <#+   foreach (Match m in source.ReMatches(@"#define NS_ATTR_FUNC_(?<Name>\w+) +(?<Value>-?\d+)(?<Comment> *// .*)?")) { #>
-        <#=m.Get("Name")#> = <#=m.Get("Value")#>,<#=m.Get("Comment").Trim()#>
+        <#=ToPascalId(m.Get("Name")).Replace("match", "Match")#> = <#=m.Get("Value")#>,<#=m.Get("Comment").Trim()#>
 <#+   } #>
     }
 }
