Renamed nsStyle to CssStyle.

--- a/Alba.CsCss/Style/Original/nsCSSProps.tt
+++ b/Alba.CsCss/Style/Original/nsCSSProps.tt
@@ -19,7 +19,7 @@ using uint32_t = System.Int32;
 
 namespace Alba.CsCss.Style
 {
-<#+ WriteTypeRenames("nsCSSProperty", "nsCSSKeyword"); #>
+<#+ WriteTypeRenames("nsCSSProperty", "nsCSSKeyword", "nsStyle"); #>
 
     internal partial class nsCSSProps
     {
