--- a/Alba.CsCss/Style/Original/nsIWidget.tt
+++ b/Alba.CsCss/Style/Original/nsIWidget.tt
@@ -16,7 +16,7 @@
 
 namespace Alba.CsCss.Style
 {
-    internal partial class nsStyle
+    public partial class CssStyle
     {
 <#+   foreach (string define in ConvertStyleDefines(source)) { #>
         <#= define #>
